Refactor images tags

--- a/install
+++ b/install
@@ -14,55 +14,36 @@ mkdir -p $selfdir/tmp
 version="2.6.0"
 tarball="$selfdir/tmp/hadoop-${version}.tar.gz"
 if [[ ! -f $tarball ]]; then
+  echo "Downloading hadoop-${version}.tar.gz"
   curl -l \
     -o $tarball \
     https://archive.apache.org/dist/hadoop/core/hadoop-${version}/hadoop-${version}.tar.gz
 fi
 
 HADOOP_HOME=$HOME/Applications/hadoop-${version}
-HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
-
+echo "#"
+echo "# Extracting to HADOOP_HOME=$HADOOP_HOME"
 rm -Rf $HADOOP_HOME
 mkdir -p $(dirname $HADOOP_HOME)
-tar xvfz $tarball -C $(dirname $HADOOP_HOME)
+tar xfz $tarball -C $(dirname $HADOOP_HOME)
 
 
+HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
+echo "#"
+echo "# Configuring HADOOP_CONF_DIR=$HADOOP_CONF_DIR"
 mv $HADOOP_CONF_DIR $(dirname $HADOOP_CONF_DIR)/hadoop.default
 cp -rp $(dirname $HADOOP_CONF_DIR)/hadoop.default $(dirname $HADOOP_CONF_DIR)/hadoop.docker.net
 ln -snf $(dirname $HADOOP_CONF_DIR)/hadoop.docker.net $HADOOP_CONF_DIR
-
-
-$selfdir/configure
-
-
-cat <<CAT >> ~/.bash_profile
-
-#
-# Hadoop settings
-#
-export HADOOP_HOME=$HADOOP_HOME
-export HADOOP_CONF_DIR=$HADOOP_CONF_DIR
-export HADOOP_OPTS="$HADOOP_OPTS -Djava.library.path=$HADOOP_HOME/lib/native"
+cat <<CAT >> $HADOOP_CONF_DIR/hadoop-env.sh
+# Add Kerberos settings
+[[ -f \$HADOOP_CONF_DIR/hadoop-krb5.sh ]] && source \$HADOOP_CONF_DIR/hadoop-krb5.sh
 CAT
 
 
 cat <<CAT
-
------------------
-Please execute:
-
-$ sudo mv /Library/Preferences/edu.mit.Kerberos /Library/Preferences/edu.mit.Kerberos.backup
-$ sudo mv /etc/krb5.conf /etc/krb5.conf.backup
-
-$ sudo cat <<EOF >> /etc/hosts
 #
-# Dockerized Cloudera CDH5 cluster
+# Please add the following settings to your environment shell
 #
-127.0.0.1    kdc.docker.net
-127.0.0.1    namenode.docker.net
-127.0.0.1    datanode1.docker.net
-127.0.0.1    jobhistory.docker.net
-127.0.0.1    resourcemanager.docker.net
-127.0.0.1    nodemanager1.docker.net
-EOF
+export HADOOP_HOME=$HADOOP_HOME
+export HADOOP_CONF_DIR=$HADOOP_CONF_DIR
 CAT
