--- a/client/install
+++ b/client/install
@@ -42,7 +42,7 @@ cat <<CAT
 Please add the following settings to your environment shell
 --------------------
 
-export HADOOP_HOME=\$HOME/hadoop-${version}
+export HADOOP_HOME=\${HOME}/hadoop-${version}
 export HADOOP_CONF_DIR=\${HADOOP_HOME}/etc/hadoop
 -------------------
 CAT
